<resources>
    <string name="app_name">Finn Marketplace</string>
    <string name="action_settings">Bookmark</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">FINN</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="advertisement">Advertisement</string>
    <string name="bookmark">Advertisement</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
